Fixed navbar width issue for smaller screens (whitespace on the right side)

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -106,6 +106,9 @@ a:hover {
 .navbar {
     background-color: #235046;
     color: #fff;
+    position:fixed;
+    right: 0;
+    width:100%;
 }
 
 .footer {
